--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -36,7 +36,7 @@
                <padding>
                   <Insets left="5.0" />
                </padding></Label>
-            <TextField fx:id="txtId" editable="false" focusTraversable="false" GridPane.columnIndex="1" />
+            <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
